--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
-        "react-scripts": "2.1.2"
+        "axios": "^0.18.0",
+        "prop-types": "^15.6.1",
+        "react": "^16.3.2",
+        "react-dom": "^16.3.2",
+        "react-redux": "^5.0.7",
+        "react-scripts": "^2.1.3",
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -13,20 +18,13 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ],
     "devDependencies": {
-        "ajv": "^6.6.2",
+        "ajv": "^6.4.0",
+        "check-prop-types": "^1.1.2",
         "enzyme": "^3.8.0",
         "enzyme-adapter-react-16": "^1.7.1",
         "jest": "^23.6.0",
-        "jest-enzyme": "^7.0.1"
+        "jest-enzyme": "^7.0.1",
+        "moxios": "^0.4.0"
     }
 }
